tests/should_fail/error.c
// DEFS A B C

#if defined(A)
#error
#elif defined(B)
#error
#elif defined(C)
#error
#endif
